fix: Corrected padding behind footer
Corrected padding behind footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,6 +259,9 @@ a.button:focus{
   border-top: 1px solid #fff;
   padding: 30px 40px 30px;
 }
+#reviews-container{
+    padding-bottom:111px;
+}
 #reviews-container h2 {
   color: #A85A00;
   font-size: 24pt;
